--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -127,8 +127,8 @@
 
         <div class="quote" id="footnotes-1970">
           <p class="small"><sup>3</sup> Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES). <a href="../../../url/-org/cites/" title="CITES" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
-          <p class="small"><sup>4</sup> United States Fish &amp; Wildlife Service (US FWS). Endangered Species Act, 1973. <a href="../../../url/-gov/fws-endangered-laws-policies/" title="US FWS / Endangered Species Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
-          <p class="small"><sup>5</sup> Save the Elephants (STE). &lsquo;Counting Elephants&rsquo;. <a href="../../../url/-org/savetheelephants-counting-elephants/" title="Save the Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
+          <p class="small"><sup>4</sup> United States Fish &amp; Wildlife Service (US FWS), Endangered Species Act, 1973. <a href="../../../url/-gov/fws-endangered-laws-policies/" title="US FWS / Endangered Species Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
+          <p class="small"><sup>5</sup> Save the Elephants (STE), &lsquo;Counting Elephants&rsquo;. <a href="../../../url/-org/savetheelephants-counting-elephants/" title="Save the Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
 
         </div>
       </div>
@@ -148,7 +148,7 @@
 
         <div class="quote" id="footnotes-1980">
           <p class="small"><sup>6</sup> Environmental Investigation Agency (EIA). &lsquo;A System of Extinction&rsquo;, 1989. <a href="../../../url/-org/eia-international-a-system-of-extinction/" title="EIA / A System of Extinction" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>7</sup> United States Fish &amp; Wildlife Service (US FWS). African Elephant Conservation Act, 1988. <a href="../../../url/-gov/fws-african-elephant-conservation-act/" title="US FWS / African Elephant Conservation Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
+          <p class="small"><sup>7</sup> US FWS, African Elephant Conservation Act, 1988. <a href="../../../url/-gov/fws-african-elephant-conservation-act/" title="US FWS / African Elephant Conservation Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
 
         </div>
       </div>
@@ -178,12 +178,12 @@
 
         <div class="quote" id="footnotes-1990">
           <p class="small"><sup>8</sup> New Scientist, &lsquo;Ivory torched for Elephant Day&rsquo;, 1991. <a href="../../../url/www/newscientist-ivory-torched-for-elephant-day/" title="New Scientist / Ivory torched for Elephant Day" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>9</sup> World Wildlife Fund for Nature (WWF). &lsquo;Crush and Burn: Destroying Illegal Elephant Ivory&rsquo;, 2015. <a href="../../../url/-org/worldwildlife-crush-and-burn-destroying-illegal-ivory/" title="WWF / Crush and Brun: Destroying Illegal Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>9</sup> World Wildlife Fund for Nature (WWF), &lsquo;Crush and Burn: Destroying Illegal Elephant Ivory&rsquo;, 2015. <a href="../../../url/-org/worldwildlife-crush-and-burn-destroying-illegal-ivory/" title="WWF / Crush and Brun: Destroying Illegal Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>10</sup> CITES, &lsquo;CITES sets strict conditions for any possible future ivory sales&rsquo;, 2002. <a href="../../../url/-org/cites-2002-ivory-update/" title="CITES / CITES sets strict conditions for any possible future ivory sales&rsquo;, 2002" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>11</sup> CITES, Elephant Trade Information System (ETIS). <a href="../../../url/-org/cites-etis/" title="CITES / Elephant Trade Information System" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>&plus;</sup> TRAFFIC, Elephant Trade Information System (ETIS). <a href="../../../url/-org/traffic-elephant-trade-information-system/" title="TRAFFIC / Elephant Trade Information System" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>12</sup> CITES, Monitoring the Illegal Killing of Elephants (MIKE). <a href="../../../url/-org/cites-mike/" title="CITES / Monitoring the Illegal Killing of Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>&plus;</sup> Monitoring the Illegal Killing of Elephants (MIKE). <a href="../../../url/-org/citesmike/" title="MIKE" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>11</sup> CITES, Elephant Trade Information System. <a href="../../../url/-org/cites-etis/" title="CITES / Elephant Trade Information System" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>&plus;</sup> TRAFFIC, Elephant Trade Information System. <a href="../../../url/-org/traffic-elephant-trade-information-system/" title="TRAFFIC / Elephant Trade Information System" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>12</sup> CITES, Monitoring the Illegal Killing of Elephants. <a href="../../../url/-org/cites-mike/" title="CITES / Monitoring the Illegal Killing of Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>&plus;</sup> Monitoring the Illegal Killing of Elephants. <a href="../../../url/-org/citesmike/" title="MIKE" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -208,7 +208,7 @@
           <p class="small"><sup>14</sup> Russo, C. National Geographic, <em>A Voice for Elephants</em>, &lsquo;Can Elephants Survive a Legal Ivory Trade?&rsquo;, 2014. <a href="../../../url/www/nationalgeographic-elephants-poaching-ivory-ban/" title="National Geographic / Can Elephants Survive a Legal Ivory Trade?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>&plus;</sup> Save the Elephants (STE), National Geographic, <em>A Voice for Elephants</em>, Opinion: &lsquo;Can Elephants Survive a Continued Ivory Trade Ban?&rsquo;, 2014. <a href="../../../url/-org/savetheelephants-can-elephants-survive-a-continued-ivory-trade-ban/" title="STE / A Voice for Elephants / Opinion: Can Elephants Survive a Continued Ivory Trade Ban?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>15</sup> African Elephant Coalition (AEC). <a href="../../../url/www/africanelephantcoalition/" title="AEC" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>15</sup> African Elephant Coalition. <a href="../../../url/www/africanelephantcoalition/" title="AEC" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -280,14 +280,14 @@
 
         <p class="linebreak"><em>The two legal ivory sales will forever shelter smuggled ivory.</em></p>
 
-        <p class="linebreak">In July, the Republic of Kenya, again, destroyed its ivory stockpile, this time a 5 ton stockpile&mdash;a symbolic statement that the Gabonese Republic echoed the year after.<sup>&nbsp;[<a class="button" onclick="fn_1990();" title="WWF, 2015">9</a>]</sup></p>
+        <p class="linebreak">In July of 2011, the Republic of Kenya, again, destroyed its ivory stockpile, this time a 5 ton stockpile&mdash;a symbolic statement that the Gabonese Republic echoed the year after.<sup>&nbsp;[<a class="button" onclick="fn_1990();" title="WWF, 2015">9</a>]</sup></p>
 
       </div>
 
       <div class="clear">
 
         <div class="quote" id="footnotes-2011">
-          <p class="small"><sup>16</sup> Environmental Investigation Agency (EIA), &lsquo;China, Ivory Trade &amp; the Future of Africa’s Elephants&rsquo;, 2008. <a href="../../../url/-org/eia-2008-china-ivory-trade/" title="EIA / China Ivory Trade &amp; the Future of Africa's Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>16</sup> EIA, &lsquo;China, Ivory Trade &amp; the Future of Africa’s Elephants&rsquo;, 2008. <a href="../../../url/-org/eia-2008-china-ivory-trade/" title="EIA / China Ivory Trade &amp; the Future of Africa's Elephants" target="_blank" rel="noopener">Download&nbsp;PDF</a></p>
           <p class="small"><sup>17</sup> TRAFFIC, &lsquo;Annus Horribilis for African Elephants&rsquo;, 2011. <a href="../../../url/-org/traffic-2011-annus-horribilis-for-african-elephants/" title="TRAFFIC / annus horribilis for African elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>18</sup> International Fund for Animal Welfare (IFAW), &lsquo;Making a killing: a 2011 survey of ivory markets in China&rsquo;, 2012. <a href="../../../url/-org/ifaw-survey-ivory-markets-china/" title="TRAFFIC / annus horribilis for African elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
@@ -336,7 +336,7 @@
 
           <p class="small"><sup>23</sup> Christy, B. National Geographic, &lsquo;How Killing Elephants Finances Terror in Africa&rsquo;, 2015. <a href="../../../url/www/nationalgeographic-tracking-ivory/" title="National Geographic / How Killing Elephants Finances Terror in Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>24</sup> Martin, E. Vigne, L. Save the Elephants (STE), &lsquo;Hong Kong's Ivory&rsquo;, 2015. <a href="../../../url/-org/savetheelephants-2015-hong-kong-ivory-report/" title="Save the Elephants / 2015 Hong Kong Ivory Report" target="_blank" rel="noopener">Download&nbspPDF</a></p>
+          <p class="small"><sup>24</sup> Martin, E. Vigne, L. STE, &lsquo;Hong Kong's Ivory&rsquo;, 2015. <a href="../../../url/-org/savetheelephants-2015-hong-kong-ivory-report/" title="Save the Elephants / 2015 Hong Kong Ivory Report" target="_blank" rel="noopener">Download&nbspPDF</a></p>
           <p class="small"><sup>25</sup> Born Free USA, &lsquo;Ivory's Curse: The Militarization and Professionalization of Poaching in Africa&rsquo;, 2014. <a href="../../../url/-org/bornfreeusa-ivorys-curse-2014/" title="Born Free / Ivory's Curse: The Militarization and Professionalization of Poaching in Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>&plus;</sup> Born Free USA, &lsquo;Out of Africa: Mapping the Global Trade in Illicit Elephant Ivory&rsquo;, 2014. <a href="../../../url/-org/bornfreeusa-out-of-africa-2014/" title="Born Free / Out of Africa: Mapping the Global Trade in Illicit Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
@@ -362,15 +362,15 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2014">
-          <p class="small"><sup>30</sup> Clark Howard, B. National Geographic, &lsquo;China Crushes Six Tons of Confiscated Elephant Ivory&rsquo;, 2014. <a href="../../../url/www/nationalgeographic-china-ivory-crush/" title="National Geographic / China Crushes Six Tons of Confiscated Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>30</sup> Howard, B C. National Geographic, &lsquo;China Crushes Six Tons of Confiscated Elephant Ivory&rsquo;, 2014. <a href="../../../url/www/nationalgeographic-china-ivory-crush/" title="National Geographic / China Crushes Six Tons of Confiscated Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>31</sup> Born Free UK, &lsquo;Ivory Destruction&rsquo;, 2015. <a href="../../../url/-org-uk/bornfree-ivory-trade/" title="Born Free / Ivory Destruction" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>32</sup> African Parks, &lsquo;President Idriss Deby Itno of Chad Destroys 1.1 Ton Ivory Stockpile&rsquo;, 2014. <a href="../../../url/-org/africanparks-chad-destroys-1.1-ton-ivory-stockpile/" title="African Parks / President Idriss Deby Itno of Chad Destroys 1.1 Ton Ivory Stockpile" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
             <!-- President Idriss Deby of Chad commits to destroying ivory stockpile amongst range of elephant protection measures
             //africanparks.org/newsroom/press-releases/president-idriss-deby-chad-commits-destroying-ivory-stockpile-amongst-range-elephant-protection-measures -->
 
-          <p class="small"><sup>33</sup> Elephants Without Borders (EWB), Great Elephant Census (GEC). <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>&plus;</sup> Great Elephant Census (GEC). <a href="../../../url/www/greatelephantcensus-the-census/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>33</sup> Elephants Without Borders (EWB), Great Elephant Census. <a href="../../../url/-org/elephantswithoutborders-great-elephant-census/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>&plus;</sup> Paul Allen, Great Elephant Census. <a href="../../../url/www/greatelephantcensus-the-census/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
