--- a/url/-org/cites-mike/index.html
+++ b/url/-org/cites-mike/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://cites.org/eng/prog/mike/" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://cites.org/eng/prog/mike/index.php" /></head></html>
