--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -119,16 +119,16 @@
 
         <p class="linebreak">An Endangered Species Act was signed into law in the United States of America in December 1973.<sup>&nbsp;[<a class="button" onclick="fn_1970();" title="US FWS, 1973">4</a>]</sup></p>
 
-        <p class="linebreak">In 1979, estimates from the first pan-African elephant survey, led by Iain Douglas-Hamilton, reported the African elephant population at just over one million. <em>Dr Iain Douglas-Hamilton CBE would later found the data-driven charity registered in the United Kingdom and headquartered in Nairobi, Kenya, <u>Save the Elephants</u>.</em><sup>&nbsp;[<a class="button" onclick="fn_1970();" title="STE">5</a>]</sup></p>
+        <p class="linebreak">In 1979, estimates from the first pan-African elephant survey, led by Iain Douglas-Hamilton, reported the African elephant population at just over one million. <em>Dr Iain Douglas-Hamilton CBE would later found the data-driven charity registered in the United Kingdom and headquartered in Nairobi, Kenya, <u>Save The Elephants</u>.</em><sup>&nbsp;[<a class="button" onclick="fn_1970();" title="STE">5</a>]</sup></p>
 
       </div>
 
       <div class="clear">
 
         <div class="quote" id="footnotes-1970">
-          <p class="small"><sup>3</sup> Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES). <a href="../../../url/-org/cites/" title="CITES" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
+          <p class="small"><sup>3</sup> CITES. <a href="../../../url/-org/cites/" title="CITES" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
           <p class="small"><sup>4</sup> United States Fish &amp; Wildlife Service (US FWS), Endangered Species Act, 1973. <a href="../../../url/-gov/fws-endangered-laws-policies/" title="US FWS / Endangered Species Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
-          <p class="small"><sup>5</sup> Save the Elephants (STE), &lsquo;Counting Elephants&rsquo;. <a href="../../../url/-org/savetheelephants-counting-elephants/" title="Save the Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
+          <p class="small"><sup>5</sup> Save The Elephants, &lsquo;Counting Elephants&rsquo;. <a href="../../../url/-org/savetheelephants-counting-elephants/" title="Save The Elephants" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
 
         </div>
       </div>
@@ -147,7 +147,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-1980">
-          <p class="small"><sup>6</sup> Environmental Investigation Agency (EIA). &lsquo;A System of Extinction&rsquo;, 1989. <a href="../../../url/-org/eia-international-a-system-of-extinction/" title="EIA / A System of Extinction" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> EIA. &lsquo;A System of Extinction&rsquo;, 1989. <a href="../../../url/-org/eia-international-a-system-of-extinction/" title="EIA / A System of Extinction" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>7</sup> US FWS, African Elephant Conservation Act, 1988. <a href="../../../url/-gov/fws-african-elephant-conservation-act/" title="US FWS / African Elephant Conservation Act" target="_blank" rel="noopener">Website&nbsp;Link</a>.</p>
 
         </div>
@@ -178,7 +178,7 @@
 
         <div class="quote" id="footnotes-1990">
           <p class="small"><sup>8</sup> New Scientist, &lsquo;Ivory torched for Elephant Day&rsquo;, 1991. <a href="../../../url/www/newscientist-ivory-torched-for-elephant-day/" title="New Scientist / Ivory torched for Elephant Day" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>9</sup> World Wildlife Fund for Nature (WWF), &lsquo;Crush and Burn: Destroying Illegal Elephant Ivory&rsquo;, 2015. <a href="../../../url/-org/worldwildlife-crush-and-burn-destroying-illegal-ivory/" title="WWF / Crush and Brun: Destroying Illegal Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>9</sup> WWF, &lsquo;Crush and Burn: Destroying Illegal Elephant Ivory&rsquo;, 2015. <a href="../../../url/-org/worldwildlife-crush-and-burn-destroying-illegal-ivory/" title="WWF / Crush and Brun: Destroying Illegal Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>10</sup> CITES, &lsquo;CITES sets strict conditions for any possible future ivory sales&rsquo;, 2002. <a href="../../../url/-org/cites-2002-ivory-update/" title="CITES / CITES sets strict conditions for any possible future ivory sales&rsquo;, 2002" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>11</sup> CITES, Elephant Trade Information System. <a href="../../../url/-org/cites-etis/" title="CITES / Elephant Trade Information System" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>&plus;</sup> TRAFFIC, Elephant Trade Information System. <a href="../../../url/-org/traffic-elephant-trade-information-system/" title="TRAFFIC / Elephant Trade Information System" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
@@ -206,7 +206,7 @@
           <p class="small"><sup>13</sup> CITES, &lsquo;Ivory Auctions&rsquo;, 2008. <a href="../../../url/-org/cites-2008-ivory/" title="CITES / 2008 Ivory Auctions" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <p class="small"><sup>14</sup> Russo, C. National Geographic, <em>A Voice for Elephants</em>, &lsquo;Can Elephants Survive a Legal Ivory Trade?&rsquo;, 2014. <a href="../../../url/www/nationalgeographic-elephants-poaching-ivory-ban/" title="National Geographic / Can Elephants Survive a Legal Ivory Trade?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>&plus;</sup> Save the Elephants (STE), National Geographic, <em>A Voice for Elephants</em>, Opinion: &lsquo;Can Elephants Survive a Continued Ivory Trade Ban?&rsquo;, 2014. <a href="../../../url/-org/savetheelephants-can-elephants-survive-a-continued-ivory-trade-ban/" title="STE / A Voice for Elephants / Opinion: Can Elephants Survive a Continued Ivory Trade Ban?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>&plus;</sup> Save The Elephants, National Geographic, <em>A Voice for Elephants</em>, Opinion: &lsquo;Can Elephants Survive a Continued Ivory Trade Ban?&rsquo;, 2014. <a href="../../../url/-org/savetheelephants-can-elephants-survive-a-continued-ivory-trade-ban/" title="Save The Elephants / A Voice for Elephants / Opinion: Can Elephants Survive a Continued Ivory Trade Ban?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <p class="small"><sup>15</sup> African Elephant Coalition. <a href="../../../url/www/africanelephantcoalition/" title="AEC" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
@@ -289,7 +289,7 @@
         <div class="quote" id="footnotes-2011">
           <p class="small"><sup>16</sup> EIA, &lsquo;China, Ivory Trade &amp; the Future of Africa’s Elephants&rsquo;, 2008. <a href="../../../url/-org/eia-2008-china-ivory-trade/" title="EIA / China Ivory Trade &amp; the Future of Africa's Elephants" target="_blank" rel="noopener">Download&nbsp;PDF</a></p>
           <p class="small"><sup>17</sup> TRAFFIC, &lsquo;Annus Horribilis for African Elephants&rsquo;, 2011. <a href="../../../url/-org/traffic-2011-annus-horribilis-for-african-elephants/" title="TRAFFIC / annus horribilis for African elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>18</sup> International Fund for Animal Welfare (IFAW), &lsquo;Making a killing: a 2011 survey of ivory markets in China&rsquo;, 2012. <a href="../../../url/-org/ifaw-survey-ivory-markets-china/" title="TRAFFIC / annus horribilis for African elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>18</sup> IFAW, &lsquo;Making a killing: a 2011 survey of ivory markets in China&rsquo;, 2012. <a href="../../../url/-org/ifaw-survey-ivory-markets-china/" title="TRAFFIC / annus horribilis for African elephants" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -332,15 +332,15 @@
 
         <div class="quote" id="footnotes-2013">
 
-          <p class="small"><sup>22</sup> Neme, L. <em>A Voice for Elephants</em>, &lsquo;New Promises Follow Elephant Slaughter in Chad and Cameroon&rsquo;, 2013. <a href="../../../url/www/laurelneme-new-promises-follow-elephant-slaughter-in-chad-and-cameroon/" title="Laurel Neme / National Geographic: New Promises Follow Elephant Slaughter in Chad and Cameroon">Website&nbsp;Link</a></p>
+          <p class="small"><sup>22</sup> Neme, L. <em>A Voice for Elephants</em>, &lsquo;New Promises Follow Elephant Slaughter in Chad and Cameroon&rsquo;, 2013. <a href="../../../url/www/laurelneme-new-promises-follow-elephant-slaughter-in-chad-and-cameroon/" title="Laurel Neme / National Geographic: New Promises Follow Elephant Slaughter in Chad and Cameroon" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <p class="small"><sup>23</sup> Christy, B. National Geographic, &lsquo;How Killing Elephants Finances Terror in Africa&rsquo;, 2015. <a href="../../../url/www/nationalgeographic-tracking-ivory/" title="National Geographic / How Killing Elephants Finances Terror in Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>24</sup> Martin, E. Vigne, L. STE, &lsquo;Hong Kong's Ivory&rsquo;, 2015. <a href="../../../url/-org/savetheelephants-2015-hong-kong-ivory-report/" title="Save the Elephants / 2015 Hong Kong Ivory Report" target="_blank" rel="noopener">Download&nbspPDF</a></p>
+          <p class="small"><sup>24</sup> Martin, E. Vigne, L. Save The Elephants, &lsquo;Hong Kong's Ivory&rsquo;, 2015. <a href="../../../url/-org/savetheelephants-2015-hong-kong-ivory-report/" title="Save The Elephants / 2015 Hong Kong Ivory Report" target="_blank" rel="noopener">Download&nbspPDF</a></p>
           <p class="small"><sup>25</sup> Born Free USA, &lsquo;Ivory's Curse: The Militarization and Professionalization of Poaching in Africa&rsquo;, 2014. <a href="../../../url/-org/bornfreeusa-ivorys-curse-2014/" title="Born Free / Ivory's Curse: The Militarization and Professionalization of Poaching in Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>&plus;</sup> Born Free USA, &lsquo;Out of Africa: Mapping the Global Trade in Illicit Elephant Ivory&rsquo;, 2014. <a href="../../../url/-org/bornfreeusa-out-of-africa-2014/" title="Born Free / Out of Africa: Mapping the Global Trade in Illicit Elephant Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>26</sup> International Union for Conservation of Nature (IUCN), &lsquo;Updated African Elephant Database&rsquo;, 2015. <a href="../../../url/-org/iucn-updated-african-elephant-database/" title="IUCN / Updated African Elephant Database reveals declining elephant populations" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>26</sup> IUCN, &lsquo;Updated African Elephant Database&rsquo;, 2015. <a href="../../../url/-org/iucn-updated-african-elephant-database/" title="IUCN / Updated African Elephant Database reveals declining elephant populations" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>27</sup> Elephant Database, &lsquo;African Elephant Range&rsquo;, 2015. <a href="../../../url/-org/africanelephantdatabase/" title="Elephant Database / African Elephant Range" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <p class="small"><sup>28</sup> The White House, &lsquo;Executive Order: Combating Wildlife Trafficking&rsquo;, 2013. <a href="../../../url/-gov/whitehouse-2013-executive-order-combating-wildlife-trafficking/" title="The White House / Executive Order: Combating Wildlife Trafficking" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
@@ -378,7 +378,7 @@
       <div>
 
         <h3 class="linebreak"><b>2015</b></h3>
-        <p>According to a report published by Save the Elephants (STE) on ivory sales and stockpiles in Hong Kong, more than 100 tons of ivory from the Hong Kong government-registered non-commercial ivory stockpile were &lsquo;deactivated&rsquo; and disappeared in a particularly short span, from 2008 through 2010, in particular in 2009, when a change in the registration system in Hong Kong required a license to possess ivory for commercial purpose. The report showed a correlation between the decreased weight of the government-registered non-commercial stockpile with the increased number of mainland Chinese tourists to Hong Kong. The report noted that correlation, however, in contrast with government-registered commercial ivory sales from 2010 through 2013, which accounted for less than 5 tons. This paradox &ndash; a thriving tourism industry that never diminishes commercial ivory stockpiles &ndash; can be explained by the aforementioned &lsquo;legal&rsquo; ivory loophole in the registration system that invites exploitative traders to launder illicit ivory into the legal markets in Hong Kong.<sup>&nbsp;[<a class="button" onclick="fn_2013();" title="Martin and Vigne, 2015">24</a>,&nbsp;<a class="button" onclick="fn_2014();" title="Born Free UK, 2015">31</a>,&nbsp;<a class="button" onclick="fn_2015();" title="National Geographic, 2015">34</a>]</sup></p>
+        <p>According to a report published by Save The Elephants on ivory sales and stockpiles in Hong Kong, more than 100 tons of ivory from the Hong Kong government-registered non-commercial ivory stockpile were &lsquo;deactivated&rsquo; and disappeared in a particularly short span, from 2008 through 2010, in particular in 2009, when a change in the registration system in Hong Kong required a license to possess ivory for commercial purpose. The report showed a correlation between the decreased weight of the government-registered non-commercial stockpile with the increased number of mainland Chinese tourists to Hong Kong. The report noted that correlation, however, in contrast with government-registered commercial ivory sales from 2010 through 2013, which accounted for less than 5 tons. This paradox &ndash; a thriving tourism industry that never diminishes commercial ivory stockpiles &ndash; can be explained by the aforementioned &lsquo;legal&rsquo; ivory loophole in the registration system that invites exploitative traders to launder illicit ivory into the legal markets in Hong Kong.<sup>&nbsp;[<a class="button" onclick="fn_2013();" title="Martin and Vigne, 2015">24</a>,&nbsp;<a class="button" onclick="fn_2014();" title="Born Free UK, 2015">31</a>,&nbsp;<a class="button" onclick="fn_2015();" title="National Geographic, 2015">34</a>]</sup></p>
 
         <p class="linebreak">The Republic of Kenya, again, set off a symbolic defiance of the international trade in ivory, burned 15 tons, followed closely by over 6 tons in the Federal Democratic Republic of Ethiopia, nearly 5 tons in the Republic of Congo, more than 10 tons in the United Arab Emirates, nearly 1 ton in the People's Republic of China, 1 ton in the United States of America, and more than 2 tons in the Republic of Mozambique.<sup>&nbsp;[<a class="button" onclick="fn_1990();" title="WWF, 2015">9</a>,&nbsp;<a class="button" onclick="fn_2015();" title="Born Free USA, 2015; Neme, 2015; WCS, 2015; CITES, 2015; US FWS, 2015; TRAFFIC, 2015">35-40</a>]</sup></p>
 
@@ -392,14 +392,14 @@
 
           <p class="small"><sup>35</sup> Born Free USA, &lsquo;Kenya Sends Out 15 Ton Ivory Smoke Signal&rsquo;, 2015. <a href="../../../url/-org/bornfreeusa-kenya-sends-out-15-ton-ivory-smoke-signal/" title="Born Free / Kenya Sends Out 15 Ton Ivory Smoke Signal" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>36</sup> Neme, L. <em>A Voice for Elephants</em>, &lsquo;Ethiopia Burns Entire 6.1-Ton Ivory Stockpile&rsquo;, 2015. <a href="../../../url/www/laurelneme-ethiopia-burns-entire-6-1-ton-ivory-stockpile/" title="Laurel Neme / National Geographic: Ethiopia Burns Entire 6.1-Ton Ivory Stockpile">Website&nbsp;Link</a></p>
+          <p class="small"><sup>36</sup> Neme, L. <em>A Voice for Elephants</em>, &lsquo;Ethiopia Burns Entire 6.1-Ton Ivory Stockpile&rsquo;, 2015. <a href="../../../url/www/laurelneme-ethiopia-burns-entire-6-1-ton-ivory-stockpile/" title="Laurel Neme / National Geographic: Ethiopia Burns Entire 6.1-Ton Ivory Stockpile" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>37</sup> Wildlife Conservation Society (WCS), &lsquo;Congo Republic burns its entire stockpile of seized ivory&rsquo;, 2015. <a href="../../../url/-org/wcs-congo-republic-burns-its-entire-stockpile-of-seized-ivory/" title="">Website&nbsp;Link</a></p>
+          <p class="small"><sup>37</sup> Wildlife Conservation Society (WCS), &lsquo;Congo Republic burns its entire stockpile of seized ivory&rsquo;, 2015. <a href="../../../url/-org/wcs-congo-republic-burns-its-entire-stockpile-of-seized-ivory/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>38</sup> CITES, &lsquo;CITES remarks to the first destruction of confiscated elephant ivory in the United Arab Emirates&rsquo;, 2015. <a href="../../../url/-org/cites-uae-ivory-destruction-2015/" title="">Website&nbsp;Link</a></p>
+          <p class="small"><sup>38</sup> CITES, &lsquo;CITES remarks to the first destruction of confiscated elephant ivory in the United Arab Emirates&rsquo;, 2015. <a href="../../../url/-org/cites-uae-ivory-destruction-2015/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <p class="small"><sup>39</sup> US FWS, &lsquo;United States Destroys Confiscated Elephant Ivory in Times Square&rsquo;, 2015. <a href="../../../url/-gov/fws-2015-united-states-destroys-confiscated-elephant-ivory-times-square/" title="">Website&nbsp;Link</a></p>
-          <p class="small"><sup>40</sup> TRAFFIC, &lsquo;Vital Evidence Goes up in Smoke&rsquo;, 2015. <a href="../../../url/-org/traffic-vital-evidence-goes-up-in-smoke/" title="TRAFFIC / Vital Evidence Goes up in Smoke">Website&nbsp;Link</a></p>
+          <p class="small"><sup>39</sup> US FWS, &lsquo;United States Destroys Confiscated Elephant Ivory in Times Square&rsquo;, 2015. <a href="../../../url/-gov/fws-2015-united-states-destroys-confiscated-elephant-ivory-times-square/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>40</sup> TRAFFIC, &lsquo;Vital Evidence Goes up in Smoke&rsquo;, 2015. <a href="../../../url/-org/traffic-vital-evidence-goes-up-in-smoke/" title="TRAFFIC / Vital Evidence Goes up in Smoke" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
