--- a/conservation/index.html
+++ b/conservation/index.html
@@ -90,7 +90,7 @@
               <li><a href="../url/-org/nature/" title="The Nature Conservancy" target="_blank" rel="noopener">The Nature Conservancy</a></li>
               <li><a href="../url/-org/wildnet/" title="WCN" target="_blank" rel="noopener">Wildlife Conservation Network</a></li>
               <li><a href="../url/-org/wild/" title="WILD" target="_blank" rel="noopener">The Wild Foundation</a></li>
-              <li><a href="../url/-org/worldwildlife/" title="WWF" target="_blank" rel="noopener">World Wildlife Fund for Nature</a></li>
+              <li><a href="../url/-org/worldwildlife/" title="WWF" target="_blank" rel="noopener">World Wide Fund for Nature</a></li>
 
             </ul>
           </div>
