--- a/societas/r/confirmation/1/index.html
+++ b/societas/r/confirmation/1/index.html
@@ -51,7 +51,7 @@
         <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que m&eacute;c&egrave;ne.</font></h5>
         <p>Receive a certificate of membership as an annual patron of the studio or as a member of the Periwinkle Blue or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion en tant que m&eacute;c&egrave;ne annuel du studio ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
 
-        <p class="linebreak">Animat Habitat <a href="../../../../dono/" title="Animat Habitat dono.">Donate</a><font class="fr">&nbsp;&#92;&nbsp;Don</font></p>
+        <p class="linebreak">Animat Habitat <a href="../../../../patron/" title="Animat Habitat patronage.">Patron</a></p>
 
       </div>
 
