--- a/support/index.html
+++ b/support/index.html
@@ -42,14 +42,13 @@
       <div>
         <p><a href="../" title="Animat Habitat">Animat Habitat</a></p>
         <p>Animat Habitat <a href="../canon/" title="Animat Habitat canon.">Canon</a></p>
-        <p>Animat Habitat <a href="../dono/" title="Animat Habitat dono.">Donate</a><font class="fr">&nbsp;&#92;&nbsp;Don</font></p>
-        <p>Animat Habitat <a href="../princeps/" title="Animat Habitat princeps.">Princeps</a></p>
+        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron</a></p>
 
-        <h5 class="linebreak scene-one title">I. White Elephant</h5>
+        <h5 class="linebreak scene-one title">I&nbsp; White Elephant</h5>
         <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
         <p>Animat Habitat Scene One &ndash; <a href="../scene/one/making-of-ella/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
-        <h5 class="linebreak scene-two title">II. White Tiger</h5>
+        <h5 class="linebreak scene-two title">II&nbsp; White Tiger</h5>
         <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
         <p>Animat Habitat Scene Two &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
@@ -71,6 +70,8 @@
 
         <h5 class="letterhead title">Society<font class="fr">&nbsp;&#92;&nbsp;Soci&eacute;t&eacute;</font></h5>
         <p>Animat Habitat <a href="../societas/" title="Animat Habitat societ&#257;s.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
+        <p>Animat Habitat <a href="../societas/councilium/" title="Animat Habitat concilium.">Concilium</a></p>
+        <p>Animat Habitat <a href="../societas/princeps/" title="Animat Habitat princeps.">Princeps</a></p>
 
         <h5 class="letterhead title">Terms<font class="fr">&nbsp;&#92;&nbsp;Conditions</font></h5>
         <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy.">Privacy Policy</a><font class="fr">&nbsp;&#92;&nbsp;Politique de confidentialit&eacute;</font></p>
