--- a/societas/annum/index.html
+++ b/societas/annum/index.html
@@ -11,12 +11,12 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat annum.</title>
+  <title>Animat Habitat societ&amacr;s &ndash; annum.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -24,8 +24,8 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <!-- <li class="crumb dark"><a href="../societas/" title="Animat Habitat societ&#257;s.">Societ&#257;s</a></li> -->
+      <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <!-- <li class="crumb dark"><a href="../../societas/" title="Animat Habitat societ&#257;s.">Societ&#257;s</a></li> -->
       <li class="crumb scene dark"><a><em>Annum</em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
