--- a/societas/princeps/index.html
+++ b/societas/princeps/index.html
@@ -19,9 +19,9 @@
   </style>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -29,7 +29,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb scene dark"><a><em>Princeps</em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
@@ -49,7 +49,7 @@
           <div class="clear diptych">
             <div class="clear-left clear-top">
               <h5 class="small"><em>Arts, Sciences</em></h5>
-              <p>Thalefang Charles, photographer and storyteller, Botswana &ndash; <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a>.</p>
+              <p>Thalefang Charles, photographer and storyteller, Botswana &ndash; <a href="../../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a>.</p>
               <p>Recognized for his chronicles of Indigenous knowledge across the Okavango Delta.</p>
               <p><font class="fr">Reconnu pour ses chroniques du savoir autochtones &agrave; travers le delta de l'Okavango.</font></p>
 
@@ -57,7 +57,7 @@
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Arts, Sciences</em></h5>
-              <p>Rolf Steinmann, wildlife cinematographer, <a href="../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015).</p>
+              <p>Rolf Steinmann, wildlife cinematographer, <a href="../../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015).</p>
               <p>Recognized for cinematography of wildlife in the Arctic, Antarctic and in between.</p>
               <p><font class="fr">Reconnu pour la cin&eacute;matographie de la nature dans l'Arctique et l'Antarctique.</font></p>
 
@@ -75,7 +75,7 @@
           <div class="clear diptych">
             <div class="clear-left clear-top">
               <h5 class="small"><em>Arts</em></h5>
-              <p>Dr Anne Christine Innis Dagg, CM, zoologist and author, <a href="../url/-org/anneinnisdaggfoundation/" title="Anne Innis Dagg Foundation" target="_blank">Anne Innis Dagg Foundation</a>.</p>
+              <p>Dr Anne Christine Innis Dagg, CM, zoologist and author, <a href="../../url/-org/anneinnisdaggfoundation/" title="Anne Innis Dagg Foundation" target="_blank">Anne Innis Dagg Foundation</a>.</p>
               <p>Recognized for her foundational research of giraffes.</p>
               <p><font class="fr">Reconnue pour ses recherches fondamentales sur les girafes.</font></p>
 
@@ -83,7 +83,7 @@
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Sciences</em></h5>
-              <p>Dr Monica L Bond, wildlife biologist and co-founder of <a href="../url/-org/wildnatureinstitute/" title="Wild Nature Institute" target="_blank">Wild Nature Institute</a>.</p>
+              <p>Dr Monica L Bond, wildlife biologist and co-founder of <a href="../../url/-org/wildnatureinstitute/" title="Wild Nature Institute" target="_blank">Wild Nature Institute</a>.</p>
               <p>Dr Derek E Lee, wildlife biologist and co-founder of Wild Nature Institute.</p>
               <!-- <p>James Madeli, research coordinator for Wild Nature Institute.</p> -->
               <!-- <p>Veila Makundi, Anne Innis Dagg Foundation coordinator for Wild Nature Institute.</p> -->
@@ -105,7 +105,7 @@
           <div class="clear diptych">
             <div class="clear-left clear-top">
               <h5 class="small"><em>Arts</em></h5>
-              <p><a href="../url/x/paulakahumbu/" title="X / Paula Kahumbu" target="_blank" rel="noopener">Dr Paula Kahumbu</a>, president of Wildlife Direct assumed office in 2007</p>
+              <p><a href="../../url/x/paulakahumbu/" title="X / Paula Kahumbu" target="_blank" rel="noopener">Dr Paula Kahumbu</a>, president of Wildlife Direct assumed office in 2007</p>
               <p>Recognized for her role in shining a light on wildlife conservation in Kenya.</p>
               <p><font class="fr">Reconnue pour son r&ocirc;le dans la conservation de la nature au Kenya.</font></p>
 
@@ -113,7 +113,7 @@
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Sciences</em></h5>
-              <p>Dr Rutledge (Steve) Boyes, founder of <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a> in partnership with <a href="../url/-org/nationalgeographic-okavango/" title="National Geographic / Okavango Wilderness Project" target="_blank" rel="noopener">NGOWP</a>.</p>
+              <p>Dr Rutledge (Steve) Boyes, founder of <a href="../../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a> in partnership with <a href="../../url/-org/nationalgeographic-okavango/" title="National Geographic / Okavango Wilderness Project" target="_blank" rel="noopener">NGOWP</a>.</p>
               <p>Adjany Costa, Angolan minister of Culture, Tourism, Environment appointed April 2020.</p>
               <p>Kerllen Costa, program director of NGOWP Angola assumed office April 2020.</p>
               <!-- <p>Koketso Mookodi, program director of NGOWP Botswana.</p> -->
@@ -138,14 +138,14 @@
               <p>Recognized for her progressive leadership in Canada.</p>
               <p><font class="fr">Reconnue pour sa direction progressiste au Canada.</font></p>
 
-              <!-- <a href="../url/x/mumilaaqqaqqaq/" title="X / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener"> -->
+              <!-- <a href="../../url/x/mumilaaqqaqqaq/" title="X / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener"> -->
               <!-- Mumilaaq is now focused on sewing, beading, painting and making her space hers. -->
 
             </div>
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Sciences</em></h5>
-              <p>Dr Michael John Chase, elephant ecologist, co-founder of <a href="../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a>.</p>
+              <p>Dr Michael John Chase, elephant ecologist, co-founder of <a href="../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a>.</p>
               <p>Kelly Landen, naturalist and photographer, co-founder of Elephants Without Borders.</p>
               <p>Recognized for scientific research of elephants in the Kavango-Zambezi area.</p>
               <p><font class="fr">Reconnu pour la recherche scientifique dans la r&eacute;gion de Kavango-Zambezi.</font></p>
@@ -164,7 +164,7 @@
           <div class="clear diptych">
             <div class="clear-left clear-top">
               <h5 class="small"><em>Politics</em><font class="fr">&nbsp;&#92;&nbsp;<em>Politique</em></font></h5>
-              <p><a href="../url/x/debhaalandnm/" title="X / Deb Haaland" target="_blank" rel="noopener">Debra Anne Haaland</a>, representative of New Mexico assumed office January 2019.</p>
+              <p><a href="../../url/x/debhaalandnm/" title="X / Deb Haaland" target="_blank" rel="noopener">Debra Anne Haaland</a>, representative of New Mexico assumed office January 2019.</p>
               <p>Recognized for her progressive leadership in America.</p>
               <p><font class="fr">Reconnue pour sa direction progressiste en Am&eacute;rique.</font></p>
 
@@ -172,7 +172,7 @@
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Sciences</em></h5>
-              <p>Angela Sheldrick, president of <a href="../url/-org/sheldrickwildlifetrust/" title="Sheldrick Wildlife Trust" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a> assumed office in 2001.</p>
+              <p>Angela Sheldrick, president of <a href="../../url/-org/sheldrickwildlifetrust/" title="Sheldrick Wildlife Trust" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a> assumed office in 2001.</p>
               <p>Recognized for her continued conservation leadership in Kenya.</p>
               <p><font class="fr">Reconnue pour sa poursuite de la conservation au Kenya.</font></p>
 
@@ -183,7 +183,7 @@
               <div class="clear" id="in-mem-2018">
                 <h5 class="linebreak"><a onclick="toggle_2018m();">&minus;</a></h5>
                 <h5 class="linebreak title">In Memoriam</h5>
-                <p><a href="../url/-org/sheldrickwildlifetrust-dr-dame-daphne-sheldrick-d-b-e-1934-2018/" title="Sheldrick Wildlife Trust / Dame Daphne Sheldrick" target="_blank">Dr Dame Daphne Marjorie Sheldrick</a> (1934-2018), founder of Sheldrick Wildlife Trust.</p>
+                <p><a href="../../url/-org/sheldrickwildlifetrust-dr-dame-daphne-sheldrick-d-b-e-1934-2018/" title="Sheldrick Wildlife Trust / Dame Daphne Sheldrick" target="_blank">Dr Dame Daphne Marjorie Sheldrick</a> (1934-2018), founder of Sheldrick Wildlife Trust.</p>
                 <!-- <p>Major David Leslie William Sheldrick, Kenyan farmer and park warden. (1919-1977)</p> -->
                 <p>Remembered for her dedication to wilderness and all that it embrases, to the memory of David and the pioneer wardens of national parks in Kenya, and to her family &ndash; and future generations &ndash; so that they may know how it was once upon a time.<font class="fr">&nbsp;&#92;&nbsp;Rappel&eacute;e pour son d&eacute;vouement &agrave; la nature sauvage et &agrave; tout ce qu'elle englobe, &agrave; la m&eacute;moire de David et des gardiens pionniers des parcs nationaux du Kenya, et &agrave; sa famille &ndash; et aux g&eacute;n&eacute;rations futures &ndash; afin qu'ils sachent comment c'&eacute;tait autrefois.</font></p>
 
@@ -204,7 +204,7 @@
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Politics</em><font class="fr">&nbsp;&#92;&nbsp;<em>Politique</em></font></h5>
-              <p><a href="../url/x/meganaleslie/" title="X / Megan Leslie" target="_blank" rel="noopener">Megan Anissa Leslie</a>, president of WWF Canada assumed office December 2017.</p>
+              <p><a href="../../url/x/meganaleslie/" title="X / Megan Leslie" target="_blank" rel="noopener">Megan Anissa Leslie</a>, president of WWF Canada assumed office December 2017.</p>
               <p>Recognized for her environmental advocacy in Canada.</p>
               <p><font class="fr">Reconnue pour sa d&eacute;fense de l'environnement au Canada.</font></p>
 
@@ -212,8 +212,8 @@
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Sciences</em></h5>
-              <p>Dr Cynthia Jane Moss, founder of <a href="../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank">Amboseli Trust for Elephants</a>.</p>
-              <p>Dr Joyce Hatheway Poole, co-founder of <a href="../url/-org/elephantvoices/" title="Elephant Voices" target="_blank">Elephant Voices</a>.</p>
+              <p>Dr Cynthia Jane Moss, founder of <a href="../../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank">Amboseli Trust for Elephants</a>.</p>
+              <p>Dr Joyce Hatheway Poole, co-founder of <a href="../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank">Elephant Voices</a>.</p>
               <p>Recognized for scientific research of elephants in Kenya.</p>
               <p><font class="fr">Reconnu pour la recherche scientifique sur les &eacute;l&eacute;phants au Kenya.</font></p>
 
@@ -231,7 +231,7 @@
           <div class="clear diptych">
             <div class="clear-left clear-top">
               <h5 class="small"><em>Arts</em></h5>
-              <p>Nick Brandt, director and photographer, co-founder of <a href="../url/-org/biglife/" title="Big Life Foundation" target="_blank">Big Life Foundation</a>.</p>
+              <p>Nick Brandt, director and photographer, co-founder of <a href="../../url/-org/biglife/" title="Big Life Foundation" target="_blank">Big Life Foundation</a>.</p>
               <p>Richard Bonham, conservationist, co-founder of Big Life Foundation.</p>
               <p>Recognized for conservation leadership in the Greater Amboseli ecosystem.</p>
               <p><font class="fr">Reconnu pour ses efforts de conservation dans l'&eacute;cosyst&egrave;me Amboseli.</font></p>
@@ -258,7 +258,7 @@
           <div class="clear diptych">
             <div class="clear-left clear-top">
               <h5 class="small"><em>Arts</em></h5>
-              <p>Robert (Bob) McLellan Bateman, CM, naturalist and artist, <a href="../url/-org/batemanfoundation/" title="Bateman Foundation" target="_blank">Bateman Foundation</a>.</p>
+              <p>Robert (Bob) McLellan Bateman, CM, naturalist and artist, <a href="../../url/-org/batemanfoundation/" title="Bateman Foundation" target="_blank">Bateman Foundation</a>.</p>
               <p>Recognized for his artwork to conserve nature in Canada.</p>
               <p><font class="fr">Reconnu pour ses &oelig;uvres visant &agrave; pr&eacute;server la nature au Canada.</font></p>
 
@@ -266,7 +266,7 @@
 
             <div class="clear-left clear-top">
               <h5 class="small"><em>Sciences</em></h5>
-              <p>Dr Dame Jane Morris Goodall, primatologist and anthropologist, <a href="../url/-org/janegoodall/" title="Jane Goodall Institute" target="_blank">Jane Goodall Institute</a>.</p>
+              <p>Dr Dame Jane Morris Goodall, primatologist and anthropologist, <a href="../../url/-org/janegoodall/" title="Jane Goodall Institute" target="_blank">Jane Goodall Institute</a>.</p>
               <p>Recognized for her advocacy to conserve the nature world.</p>
               <p><font class="fr">Reconnue pour sa d&eacute;fense de la conservation de la nature.</font></p>
 
