--- a/patron/index.html
+++ b/patron/index.html
@@ -30,7 +30,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active dark"><a><em>Dono</em></a></li>
+      <li class="crumb active dark"><a><em>Patron</em></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <!-- <li class="right thin dark"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
